Merge OpenSearchPagedIndexScan and OpenSearchIndexScan (#1600)
Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>
Signed-off-by: Max Ksyunz <maxk@bitquilltech.com>
Co-authored-by: Yury-Fridlyand <yury.fridlyand@improving.com>